# DSPS

./: .gitignore  pyproject.toml
HW1/: HW1.ipynb  database.sql
HW2/: HW2.ipynb  customer.csv
