[tool.poetry]
name = "dsps"
version = "0.1.0"
description = ""
authors = ["alex123012 <makhonin.a.ru@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
psycopg2-binary = "^2.9.9"
pandas = "^2.2.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
